DTLS transport might be connected twice to DataChannelConnection
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox121 | --- | verified |
People
(Reporter: boivie, Assigned: bwc)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36
Steps to reproduce:
- Go to http://meet.new
Actual results:
The DTLS transport is connected twice to the DataChannelConnection, which results in incoming DTLS packets (which are SCTP packets) are provided twice to usrsctp.
You will notice it mostly if doing a SCTP packet capture, seeing the incoming DATA are seen twice, and every outgoing SACK has the "duplicate TSN" field set.
This affects the congestion control algorithm and results in SACKs being sent for every DATA, instead of for every second data.
This is most likely triggered by Meet operating on the SDP. This doesn't always happen; Most simple examples (like https://tomashubelbauer.github.io/webrtc-data-channel-demo/) doesn't trigger it.
Expected results:
The SCTP transport is properly set up, and sent messages from the server are received once by the client's SCTP implementation.
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 1•1 year ago
|
||
It is entirely possible that this is resulting in significant performance problems, particularly with peer connections with lots of renegotiations.
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 2•1 year ago
|
||
Assignee | ||
Comment 3•1 year ago
|
||
Assignee | ||
Comment 4•1 year ago
|
||
Try looks fine.
Comment 6•1 year ago
|
||
bugherder |
Comment 7•1 year ago
|
||
Hi,
Is manual testing required here? If yes, can you provide us some details how to verify the SCTP transport?
Reporter | ||
Comment 8•1 year ago
|
||
I have done manual verification of that one as part of also verifying bug 1464914.
Comment 10•1 year ago
|
||
Based on comment 8 I will set the status flag as verified on Firefox 121.
Description
•