Bug 1860072: Avoid duplicate connect calls to the transport handler. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D191484