netwerk/sctp/datachannel/DataChannel.cpp
@@ -794,10 +794,13 @@ void DataChannelConnection::SetSignals(const std::string& aTransportId) {
     MutexAutoLock lock(mLock);
     mTransportId = aTransportId;
   }
-  mTransportHandler->SignalPacketReceived.connect(
-      this, &DataChannelConnection::SctpDtlsInput);
-  mTransportHandler->SignalStateChange.connect(
-      this, &DataChannelConnection::TransportStateChange);
+  if (!mConnectedToTransportHandler) {
+    mTransportHandler->SignalPacketReceived.connect(
+        this, &DataChannelConnection::SctpDtlsInput);
+    mTransportHandler->SignalStateChange.connect(
+        this, &DataChannelConnection::TransportStateChange);
+    mConnectedToTransportHandler = true;
+  }
   // SignalStateChange() doesn't call you with the initial state
   if (mTransportHandler->GetState(mTransportId, false) ==
       TransportLayer::TS_OPEN) {
